# Change Log
[ToLaserBlade (Fabric)](https://www.curseforge.com/minecraft/mc-mods/tolaserblade-fabric).
[Source](https://github.com/Iunius118/ToLaserBlade-Fabric).

## [Unreleased]
### Added
- Add laser blades of extra shapes to mod creative mode tab.

## [1.19.3-0.7.0.4]
### Changed
- Require Fabric API 0.72.0+1.19.3+.

## [1.19.3-0.7.0.4-beta.1]
### Added
- New function `shield` to laser blade json model.

### Changed
- Update to Minecraft 1.19.3.
- Require Fabric API 0.69.1+1.19.3+.
- Require Cloth Config 9.0.94+.
- ToLaserBlade API and laser blade model interface.

### Fixed
- Laser blade models.

## [1.19.3-rc1-0.7.0.3-beta]
### Changed
- Update to Minecraft 1.19.3-rc1.
- Require Fabric API 0.68.1+1.19.3+.
- Require Cloth Config 9.0.93+.
- Add `gui_resize` to laser blade json model.

### Fixed
- Laser blade json model functions: `rotate`, `pop_pose`.
- Laser blade models included in mod.

## [22w45a-0.7.0.2-beta]
### Fixed
- Remove common item tags already defined in Fabric API.
- Recipe advancements of laser blade parts.

## [22w45a-0.7.0.1-beta]
### Added
- New items: Laser Blade Blueprint, LB Energy Cell, Laser Medium, Laser Blade Emitter, and Laser Blade Casing.
- Recipes for new items.
- Advancements for recipes.

### Changed
- Update to Minecraft 22w45a (1.19.3-snapshot).
- Require Fabric API 0.66.2+1.19.3+.
- Laser Blade recipe to use blueprint and parts.

## [22w44a-0.7.0.0-beta]
### Added
- Upgrade recipe of Looting enchantment: Laser Blade + Nautilus Shell/Block of Emerald.
- Three new laser blade shapes.
- New recipe type `tolaserblade:model_change` to change laser blade shape on Smithing Table.
- Recipes to change laser blade shape: Laser Blade + Glass/Sand/Sandstone/Dirt.

### Changed
- Update to Minecraft 22w44a (1.19.3-snapshot).
- Require Fabric Loader 0.14.10+.
- Require Fabric API 0.65.3+1.19.3+.
- Require Cloth Config 9.0.92+.
- Attack damage upgrade recipe consumes Block of Diamond now.

## [1.19-0.6.2.0]
### Added