@@ -77,6 +77,6 @@ public class LBSwordItem extends SwordItem implements LaserBladeItemBase {
     @Override
     public void appendHoverText(ItemStack itemStack, @Nullable Level level, List<Component> list, TooltipFlag tooltipFlag) {
         super.appendHoverText(itemStack, level, list, tooltipFlag);
-        LaserBladeItemUtil.addLaserBladeInformation(itemStack, level, list, tooltipFlag);
+        LaserBladeItemUtil.addLaserBladeInformation(itemStack, level, list, tooltipFlag, Upgrade.Type.OTHER);
     }
 }
