@@ -1,7 +1,10 @@
 package com.github.iunius118.tolaserblade.world.item;
 
 import com.github.iunius118.tolaserblade.common.util.ModSoundEvents;
+import com.github.iunius118.tolaserblade.core.laserblade.LaserBlade;
 import com.github.iunius118.tolaserblade.core.laserblade.LaserBladeTextKey;
+import com.github.iunius118.tolaserblade.core.laserblade.LaserBladeVisual;
+import com.github.iunius118.tolaserblade.core.laserblade.upgrade.Upgrade;
 import net.minecraft.ChatFormatting;
 import net.minecraft.network.chat.Component;
 import net.minecraft.sounds.SoundEvent;
@@ -16,19 +19,51 @@ import org.jetbrains.annotations.Nullable;
 import java.util.List;
 
 public class LaserBladeItemUtil {
-    public static void addLaserBladeInformation(ItemStack itemStack, @Nullable Level level, List<Component> list, TooltipFlag tooltipFlag) {
-        // LaserBlade laserBlade = LaserBlade.of(itemStack.copy());
+    public static void playSwingSound(Level level, LivingEntity entity, boolean isFireResistant) {
+        SoundEvent soundEvent = isFireResistant ? ModSoundEvents.ITEM_LASER_BLADE_FP_SWING : ModSoundEvents.ITEM_LASER_BLADE_SWING;
+        Vec3 pos = entity.position().add(0, entity.getEyeHeight(), 0).add(entity.getLookAngle());
+        level.playSound(null, pos.x, pos.y, pos.z, soundEvent, SoundSource.PLAYERS, 0.5F, 1.0F);
+    }
+
+    public static void addLaserBladeInformation(ItemStack itemStack, @Nullable Level level, List<Component> list, TooltipFlag flag, Upgrade.Type upgradeType) {
+        LaserBlade laserBlade = LaserBlade.of(itemStack);
         boolean isFireResistant = itemStack.getItem().isFireResistant();
 
         if (isFireResistant) {
             list.add(LaserBladeTextKey.KEY_TOOLTIP_FIRE_RESISTANT.translate().withStyle(ChatFormatting.GOLD));
         }
+
+        switch (upgradeType) {
+            case BATTERY -> addAttackSpeed(list, laserBlade.getAttackPerformance().speed);
+            case MEDIUM -> addAttackDamage(list, laserBlade.getAttackPerformance().damage);
+            case CASING, OTHER -> addModelType(list, laserBlade);
+            default -> {}
+        }
     }
 
-    public static void playSwingSound(Level level, LivingEntity entity, boolean isFireResistant) {
-        SoundEvent soundEvent = isFireResistant ? ModSoundEvents.ITEM_LASER_BLADE_FP_SWING : ModSoundEvents.ITEM_LASER_BLADE_SWING;
-        Vec3 pos = entity.position().add(0, entity.getEyeHeight(), 0).add(entity.getLookAngle());
-        level.playSound(null, pos.x, pos.y, pos.z, soundEvent, SoundSource.PLAYERS, 0.5F, 1.0F);
+    private static void addModelType(List<Component> tooltip, LaserBlade laserBlade) {
+        LaserBladeVisual visual = laserBlade.getVisual();
+        int modelType = visual.getModelType();
+
+        if (modelType >= 0) {
+            tooltip.add(LaserBladeTextKey.KEY_TOOLTIP_MODEL.translate(modelType).withStyle(ChatFormatting.DARK_GRAY));
+        }
+    }
+
+    private static void addAttackDamage(List<Component> tooltip, float atk) {
+        if (atk <= -0.005F || atk >= 0.005) {
+            tooltip.add(getUpgradeTextComponent(LaserBladeTextKey.KEY_TOOLTIP_ATTACK_DAMAGE.getKey(), atk));
+        }
+    }
+
+    private static void addAttackSpeed(List<Component> tooltip, float spd) {
+        if (spd <= -0.005F || spd >= 0.005) {
+            tooltip.add(getUpgradeTextComponent(LaserBladeTextKey.KEY_TOOLTIP_ATTACK_SPEED.getKey(), spd));
+        }
+    }
+
+    private static Component getUpgradeTextComponent(String key, float value) {
+        return Component.translatable(key, (value < 0 ? "" : "+") + ItemStack.ATTRIBUTE_MODIFIER_FORMAT.format(value)).withStyle(ChatFormatting.DARK_GREEN);
     }
 
     private LaserBladeItemUtil() {}
