@@ -4,7 +4,8 @@
 
 ## [Unreleased]
 ### Added
-- Add laser blades of extra shapes to mod creative mode tab.
+- Laser blades of extra shapes to mod creative mode tab.
+- Model information to item tooltip of laser blade.
 
 ## [1.19.3-0.7.0.4]
 ### Changed
